Toggling pointer-events on body does not re-enable scrolling on child https://bugs.webkit.org/show_bug.cgi?id=218533 <rdar://problem/71009746>

Reviewed by Simon Fraser.

Source/WebCore:

* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::changeRequiresRecompositeLayer const):
Changes to the CSS `pointer-events` property should also also indicate that a recomposite is
required (`StyleDifference::RecompositeLayer`), resulting in `RenderElement::styleWillChange`
being called, which invalidates the event region since the value of the CSS `pointer-events`
property has changed.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::layerStyleChanged):
Don't limit `StyleDifference::RecompositeLayer` changes to only affect `RenderWidget`.

LayoutTests:

* fast/scrolling/ios/overflow-scroll-pointer-events.html: Added.
* fast/scrolling/ios/overflow-scroll-pointer-events-expected.txt: Added.


Canonical link: https://commits.webkit.org/232030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270339 268f45cc-cd09-0410-ab3c-d52691b4dbfc